# japanese-agent

./: .coverage  .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  claude-code-review.yml  claude.yml
data/: core_vocab_survival.json  hiragana.json  kanji_N2.json  kanji_N3.json  kanji_N4.json  kanji_N5.json  katakana.json  keigo_basic.json  survival_phrases.json
docs/: ARCHITECTURE.md  vocab_schema.md
jp_agent/: cards.py  cli.py  config.py  db.py  llm.py  models.py  quiz.py  utils.py  vocab.py
jp_agent/agents/: __init__.py  generator.py  planner.py  srs.py  verifier.py
tests/: conftest.py  test_cli_quiz.py  test_generator_verifier.py  test_generator_verifier_branches.py  test_hashes.py  test_planner.py  test_srs.py  test_support_modules.py  test_survival_modes.py  test_vocab.py  test_vocab_branches.py
