[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jp-agent"
version = "0.1.0"
description = "CLI Japanese study agent with SRS"
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [{ name = "Kiefer Land" }]
dependencies = [
  "typer>=0.12.5,<1.0",
  "click==8.1.7",
  "openai>=1.12.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
]

[project.scripts]
jp-agent = "jp_agent.cli:app"

[tool.setuptools.packages.find]
include = ["jp_agent*"]
